--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
         <form name="quizForm" onsubmit="return submitAnswers()">
             <h3>1. In which HTML element do we put in JavaScript code</h3>
             <input type="radio" name="q1" value="a" id="q1a">&lt;js&gt; <br>
-            <input type="radio" name="q1" value="a" id="q1a">&lt;script&gt; <br>
-            <input type="radio" name="q1" value="a" id="q1a">&lt;body&gt; <br>
-            <input type="radio" name="q1" value="a" id="q1a">&lt;link&gt; <br>
+            <input type="radio" name="q1" value="b" id="q1b">&lt;script&gt; <br>
+            <input type="radio" name="q1" value="c" id="q1c">&lt;body&gt; <br>
+            <input type="radio" name="q1" value="d" id="q1d">&lt;link&gt; <br>
 
             <h3>2. Which HTML attribute is used to reference an external JavaScript file</h3>
-            <input type="radio" name="q1" value="a" id="q1a"> src <br>
-            <input type="radio" name="q1" value="a" id="q1a"> rel <br>
-            <input type="radio" name="q1" value="a" id="q1a"> type <br>
-            <input type="radio" name="q1" value="a" id="q1a"> href <br>
+            <input type="radio" name="q2" value="a" id="q2a"> src <br>
+            <input type="radio" name="q2" value="b" id="q2b"> rel <br>
+            <input type="radio" name="q2" value="c" id="q2c"> type <br>
+            <input type="radio" name="q2" value="d" id="q2d"> href <br3>
 
-            <h3>How would you write "Hello" in an alert box </h3>
-            <input type="radio" name="q1" value="a" id="q1a"> msg("Hello"); <br>
-            <input type="radio" name="q1" value="a" id="q1a"> alertBox("Hello"); <br>
-            <input type="radio" name="q1" value="a" id="q1a"> document.write("Hello"); <br>
-            <input type="radio" name="q1" value="a" id="q1a"> aler("Hello"); <br>
+            <h3>3. How would you write "Hello" in an alert box </h3>
+            <input type="radio" name="q3" value="a" id="q3a"> msg("Hello"); <br>
+            <input type="radio" name="q3" value="b" id="q3b"> alertBox("Hello"); <br>
+            <input type="radio" name="q3" value="c" id="q3c"> document.write("Hello"); <br>
+            <input type="radio" name="q3" value="d" id="q3d"> aler("Hello"); <br>
 
             <h3>4. JavaScript is directly related to the "Java" programming language </h3>
-            <input type="radio" name="q1" value="a" id="q1a"> True <br>
-            <input type="radio" name="q1" value="a" id="q1a"> False <br>
+            <input type="radio" name="q4" value="a" id="q4a"> True <br>
+            <input type="radio" name="q4" value="b" id="q4b"> False <br>
 
             <h3>5. A variable in JavaScript must start with which special character </h3>
-            <input type="radio" name="q1" value="a" id="q1a"> @ <br>
-            <input type="radio" name="q1" value="a" id="q1a"> $ <br>
-            <input type="radio" name="q1" value="a" id="q1a"> # <br>
-            <input type="radio" name="q1" value="a" id="q1a"> No special character <br>
+            <input type="radio" name="q5" value="a" id="q5a"> @ <br>
+            <input type="radio" name="q5" value="b" id="q5b"> $ <br>
+            <input type="radio" name="q5" value="c" id="q5c"> # <br>
+            <input type="radio" name="q5" value="d" id="q5d"> No special character <br>
             <br><br>
             <input type="submit" value="Submit Answers">
         </form>
